# Communication

./: .gitignore  CMakeLists.txt  Rakefile  RakefileOLD
UDP_tests.xcodeproj/: project.pbxproj
UDP_tests.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
UDP_tests.xcodeproj/project.xcworkspace/xcuserdata/enrico.xcuserdatad/: UserInterfaceState.xcuserstate
UDP_tests.xcodeproj/xcuserdata/enrico.xcuserdatad/xcschemes/: xcschememanagement.plist
WP4 - Application development/: SAFE_STRIP_map_requirements_for_the_applications_v01.docx  SafeStripMQTTproposal.pptx
WP4 - Application development/MQTT Broker/: SAFE STRIP_MQTT.docx
src/: buffer_defines.h  buffer_defines_hton.c  buffer_defines_ntoh.c  udp_C_class.c  udp_C_class.h  udp_C_unix.hxx  udp_C_unix_code.h  udp_C_win.hxx  udp_C_win_code.h  udp_C_win_libs.h  udp_buffer_defines.h  udp_buffer_defines_hton.c  udp_buffer_defines_ntoh.c  udp_class.cc  udp_class.hh  udp_defines.c  udp_defines.h  udp_defines_unix.hxx  udp_defines_win.hxx  udp_hton.c  udp_ntoh.c
src_generator/: README.md  ca.crt  config.rb  generate_MQTT_lib.rb  generate_Python_dec.rb  generate_UDP_lib.rb  generate_all.rb  generate_sim_pakage.rb  makefile  serialize.rb  signalmap.yaml  signalmap_MQTT.yaml  signalmap_safestrip_interfaces_v1.0.xlsx  test_publish  test_publish.cpp  test_publish_remote  test_publish_remote.cpp  test_publish_virtual_DENM  test_publish_virtual_DENM.cpp  test_subscriber  test_subscriber.cpp  test_subscriber_remote  test_subscriber_remote.cpp  xlsx_to_yaml.rb  xlsx_to_yaml_config.rb  xlsx_to_yaml_config_example.rb  xlsx_to_yaml_config_example_v2.rb
src_generator/generated_4_py/: example_of_usage.py
src_mqtt_test/: README.md  makefile  signalmap.yaml  test_publish  test_publish.cpp  test_publish_remote  test_publish_remote.cpp  test_publish_virtual_DENM  test_publish_virtual_DENM.cpp  test_subscriber  test_subscriber.cpp  test_subscriber_remote  test_subscriber_remote.cpp
src_tests/: codriver_interfaces_data_structs.h  dspace_send_test.cc  dspace_server_test.cc  server_client_test.cc  server_client_test2.cc  server_client_test3.cc  server_client_test4.cc  server_client_test5.cc  server_client_test_dspace.cc  server_cpp.cc
src_udp_test/: README.md  signalmap.yaml  xlsx_to_yaml_config_UDP_test.rb
test/: client_c.c  client_cpp.cc  codriver_interfaces_data_structs.c  codriver_interfaces_data_structs.h  server_c.c  server_client_test3.cc  server_client_test4.cc  server_client_test5.cc  server_client_test_dspace.cc  server_cpp.cc  signalmap_safestrip_interfaces_v1.0.xlsx
